@@ -1,15 +1,10 @@
 package com.moriaty.vuitton.service.novel.downloader;
 
-
-import com.gargoylesoftware.htmlunit.html.DomNodeList;
-import com.gargoylesoftware.htmlunit.html.HtmlElement;
-import com.gargoylesoftware.htmlunit.html.HtmlPage;
 import com.moriaty.vuitton.bean.novel.network.NetworkNovelChapter;
 import com.moriaty.vuitton.bean.novel.network.NetworkNovelContent;
 import com.moriaty.vuitton.bean.novel.network.NetworkNovelInfo;
 import com.moriaty.vuitton.bean.novel.network.QueryNetworkNovelInfo;
 import com.moriaty.vuitton.constant.Constant;
-import com.moriaty.vuitton.util.HtmlUnitUtil;
 import com.moriaty.vuitton.util.UuidUtil;
 import lombok.extern.slf4j.Slf4j;
 import org.jsoup.Jsoup;
@@ -25,23 +20,23 @@ import java.util.List;
 
 /**
  * <p>
- * 全民小说 Downloader
+ * 三五 Downloader
  * </p>
  *
  * @author Moriaty
- * @since 2023/10/28 16:48
+ * @since 2023/12/3 22:11
  */
 @Component
 @Slf4j
-public class QuanMingNovelDownloader implements NovelDownloader {
+public class ThreeFiveNovelDownloader implements NovelDownloader {
 
     private final NovelDownloaderInfo info = new NovelDownloaderInfo()
-            .setWebName("全民小说")
-            .setMark("QuanMing")
-            .setWebsite("https://www.1q1m.com")
-            .setContentBaseUrl("https://www.1q1m.com/")
-            .setCatalogueBaseUrl("https://www.1q1m.com/book/")
-            .setSearchBaseUrl("https://www.1q1m.com/s?q=");
+            .setWebName("三五中文")
+            .setMark("ThreeFive")
+            .setWebsite("https://www.xkushu.com")
+            .setContentBaseUrl("https://www.xkushu.com/")
+            .setCatalogueBaseUrl("https://www.xkushu.com/")
+            .setSearchBaseUrl("https://www.xkushu.com/modules/article/search.php");
 
     @Override
     public NovelDownloaderInfo getInfo() {
@@ -51,11 +46,22 @@ public class QuanMingNovelDownloader implements NovelDownloader {
     @Override
     public QueryNetworkNovelInfo queryNovel(String searchText) {
         try {
-            HtmlPage page = HtmlUnitUtil.getPage(info.getSearchBaseUrl() + searchText);
-            List<HtmlElement> domList = page.getByXPath("//div[@class='box']");
             List<NetworkNovelInfo> novelInfoList = new ArrayList<>();
-            for (HtmlElement dom : domList) {
-                NetworkNovelInfo novelInfo = findNovelInfoFromDom(dom);
+            Document doc = Jsoup.connect(info.getSearchBaseUrl())
+                    .timeout(Constant.Network.CONNECT_TIMEOUT)
+                    .headers(Constant.Network.CHROME_HEADERS)
+                    .data("searchkey", searchText)
+                    .data("action", "login")
+                    .post();
+            Element content = doc.getElementById("content");
+            if (content == null) {
+                return new QueryNetworkNovelInfo()
+                        .setErrorMsg("id 为 content 的 dom 不存在");
+            }
+            Element tBody = content.getElementsByTag("tbody").getFirst();
+            Elements trList = tBody.getElementsByTag("tr");
+            for (int i = 1; i < trList.size() && i < 6; i++) {
+                NetworkNovelInfo novelInfo = findNovelInfoFromTr(trList.get(i));
                 if (novelInfo != null) {
                     novelInfoList.add(novelInfo
                             .setStorageKey(UuidUtil.genId())
@@ -66,7 +72,7 @@ public class QuanMingNovelDownloader implements NovelDownloader {
                     .setSourceName(info.getWebName())
                     .setSourceWebsite(info.getWebsite())
                     .setDownloaderMark(info.getMark())
-                    .setWebSearch(info.getSearchBaseUrl() + searchText)
+                    .setWebSearch(info.getSearchBaseUrl())
                     .setNovelInfoList(novelInfoList);
         } catch (IOException e) {
             log.error("查询发生异常", e);
@@ -75,37 +81,21 @@ public class QuanMingNovelDownloader implements NovelDownloader {
         }
     }
 
-    private NetworkNovelInfo findNovelInfoFromDom(HtmlElement dom) {
+    private NetworkNovelInfo findNovelInfoFromTr(Element tr) {
         NetworkNovelInfo novelInfo = new NetworkNovelInfo();
-        DomNodeList<HtmlElement> divList = dom.getElementsByTagName("div");
-        int divNum = 4;
-        if (divList.size() != divNum) {
+        Elements tdList = tr.getElementsByTag("td");
+        if (tdList.isEmpty()) {
             return null;
         }
-        HtmlElement imgDiv = divList.getFirst();
-        DomNodeList<HtmlElement> img = imgDiv.getElementsByTagName("img");
-        if (!img.isEmpty()) {
-            novelInfo.setImgUrl(img.getFirst().getAttribute("src"));
+
+        Element td = tdList.get(0);
+        Element a = td.getElementsByTag("a").getFirst();
+        novelInfo.setName(a.text());
+        novelInfo.setCatalogueUrl(a.attr("href"));
+        if (tdList.size() > 2) {
+            td = tdList.get(2);
+            novelInfo.setAuthor(td.text());
         }
-        DomNodeList<HtmlElement> h4 = dom.getElementsByTagName("h4");
-        if (!h4.isEmpty()) {
-            DomNodeList<HtmlElement> a = h4.getFirst().getElementsByTagName("a");
-            if (!a.isEmpty()) {
-                HtmlElement aFirst = a.getFirst();
-                novelInfo.setName(aFirst.getTextContent());
-                novelInfo.setCatalogueUrl(aFirst.getAttribute("href"));
-            }
-        }
-        HtmlElement author = divList.get(2);
-        String[] nameSplit = author.getTextContent().split("作者：");
-        int splitLength = 2;
-        if (nameSplit.length == splitLength) {
-            novelInfo.setAuthor(nameSplit[1]);
-        } else {
-            novelInfo.setAuthor(nameSplit[0]);
-        }
-        HtmlElement intro = divList.get(3);
-        novelInfo.setIntro(intro.getTextContent());
         return novelInfo;
     }
 
@@ -117,11 +107,15 @@ public class QuanMingNovelDownloader implements NovelDownloader {
                     .timeout(Constant.Network.CONNECT_TIMEOUT)
                     .headers(Constant.Network.CHROME_HEADERS)
                     .get();
-            Element list = doc.getElementsByClass("listmain").getFirst();
+            Element list = doc.getElementById("list");
+            if (list == null) {
+                return Collections.emptyList();
+            }
             Elements ddList = list.getElementsByTag("dd");
             for (int i = 0; i < ddList.size(); i++) {
                 Element dd = ddList.get(i);
-                if (dd.hasClass("pc_none")) {
+                Elements aList = dd.getElementsByTag("a");
+                if (aList.isEmpty()) {
                     continue;
                 }
                 Element a = dd.getElementsByTag("a").getFirst();
@@ -129,7 +123,7 @@ public class QuanMingNovelDownloader implements NovelDownloader {
                 chapterList.add(new NetworkNovelChapter()
                         .setIndex(i)
                         .setName(a.text())
-                        .setUrl(href));
+                        .setUrl(catalogueUrl + "/" + href));
             }
             return chapterList;
         } catch (IOException e) {
@@ -146,7 +140,7 @@ public class QuanMingNovelDownloader implements NovelDownloader {
                     .headers(Constant.Network.CHROME_HEADERS)
                     .ignoreHttpErrors(true)
                     .get();
-            Element content = doc.getElementById("chaptercontent");
+            Element content = doc.getElementById("content");
             if (content == null) {
                 return new NetworkNovelContent()
                         .setErrorMsg("正文不存在");
@@ -164,12 +158,6 @@ public class QuanMingNovelDownloader implements NovelDownloader {
     @Override
     public String handleContent(String content) {
         String space = "\s\s\s\s";
-        return content
-                .replace("请收藏本站：https://www.1q1m.com。全民小说网手机版：https://m.1q1m.com ",
-                        "")
-                .replace("『加入书签』", "")
-                .replace("『点此报错』", "")
-                .replace(space, "\n");
-
+        return content.replace(space, "\n");
     }
 }
